--- a/ecokitchen/src/App.css
+++ b/ecokitchen/src/App.css
@@ -11,11 +11,6 @@
   --font: "Roboto Condensed", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 .header-container {
   background-color: white;
@@ -56,7 +51,7 @@
 .app-container {
 
   background-color: var(--grey);
-  min-height: 100vh;
+  height: 100vh;
   max-width: 493px;
   margin: 0 auto;
   border-style: solid;
